--- a/app/src/main/res/layout/scan_tab.xml
+++ b/app/src/main/res/layout/scan_tab.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_view"
     android:layout_width="match_parent"
@@ -10,7 +11,8 @@
     <app.paypro.payproapp.ui.camera.CameraSourcePreview
         android:id="@+id/preview"
         android:layout_width="match_parent"
-        android:layout_height= "match_parent">
+        android:layout_height= "match_parent"
+        android:visibility="visible">
 
         <app.paypro.payproapp.ui.camera.GraphicOverlay
             android:id="@+id/graphicOverlay"
@@ -18,5 +20,31 @@
             android:layout_height="match_parent" />
 
     </app.paypro.payproapp.ui.camera.CameraSourcePreview>
+
+    <LinearLayout
+        android:id="@+id/permission_denied_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone"
+        android:gravity="center">
+
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/ic_photo_camera_black_24dp" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:textAlignment="center"
+            android:paddingLeft="60dp"
+            android:paddingRight="60dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/camera_permission_denied_text" />
+
+    </LinearLayout>
 
 </RelativeLayout>
