--- a/app/src/main/res/layout/profile_edit.xml
+++ b/app/src/main/res/layout/profile_edit.xml
@@ -17,6 +17,19 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageButton
+        android:id="@+id/backButtonToolbarProfileEdit"
+        android:layout_width="wrap_content"
+        android:layout_height="56dp"
+        android:background="@color/defaultBackgroundColor"
+        android:contentDescription="@string/todo"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:tint="@color/ic_launcher_background"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="?attr/actionModeCloseDrawable"
+        tools:layout_editor_absoluteX="0dp" />
+
     <Button
         android:id="@+id/buttonDoneProfileView"
         android:layout_width="wrap_content"
@@ -28,6 +41,17 @@
         android:textColor="@color/dot_dark_slider"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBarProfileView"
+        android:layout_width="?attr/actionBarSize"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_marginRight="16dp"
+        android:padding="15dp"
+        android:indeterminate="true"
+        android:indeterminateDrawable="@drawable/custom_progress_loader"
+        android:visibility="gone"
+        app:layout_constraintRight_toRightOf="@+id/toolbar2" />
 
     <RelativeLayout
         android:layout_width="match_parent"
