--- a/app/src/main/res/layout/contacts_list_item.xml
+++ b/app/src/main/res/layout/contacts_list_item.xml
@@ -11,17 +11,20 @@
     android:paddingBottom="10dp"
     android:paddingRight="15dp"
     android:orientation="horizontal"
-    android:clickable="true">
+    android:clickable="true"
+    android:focusable="true">
 
     <FrameLayout
         android:layout_width="45dp"
-        android:layout_height="45dp">
+        android:layout_height="45dp"
+        android:clickable="false">
 
         <ImageView
             android:id="@+id/contact_photo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:srcCompat="@drawable/default_profile" />
+            app:srcCompat="@drawable/default_profile"
+            android:clickable="false"/>
 
         <ImageView
             android:id="@+id/pp_logo"
@@ -29,7 +32,8 @@
             android:layout_height="15dp"
             android:layout_gravity="bottom|right"
             android:visibility="gone"
-            app:srcCompat="@drawable/logo_alone" />
+            app:srcCompat="@drawable/logo_alone"
+            android:clickable="false"/>
     </FrameLayout>
 
     <LinearLayout
@@ -37,7 +41,8 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:paddingLeft="12dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:clickable="false">
 
         <TextView
             android:id="@+id/contact_name"
@@ -48,7 +53,8 @@
             android:text="John Smith"
             android:layout_gravity="center_vertical"
             android:textColor="@android:color/black"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:clickable="false"/>
 
         <TextView
             android:id="@+id/contact_number"
@@ -60,7 +66,8 @@
             android:lines="1"
             android:text="+34 123 45 67 89"
             android:textColor="@android:color/black"
-            android:textSize="13sp" />
+            android:textSize="13sp"
+            android:clickable="false"/>
     </LinearLayout>
 
 </LinearLayout>
