--- a/app/src/main/res/layout/scan_tab.xml
+++ b/app/src/main/res/layout/scan_tab.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_view"
     android:layout_width="match_parent"
@@ -12,7 +11,8 @@
         android:id="@+id/preview"
         android:layout_width="match_parent"
         android:layout_height= "match_parent"
-        android:visibility="visible">
+        android:visibility="visible"
+        android:background="@android:color/black">
 
         <app.paypro.payproapp.ui.camera.GraphicOverlay
             android:id="@+id/graphicOverlay"
