--- a/app/src/main/res/layout/sendmoney_amount_fragment.xml
+++ b/app/src/main/res/layout/sendmoney_amount_fragment.xml
@@ -76,7 +76,7 @@
                 android:gravity="center"
                 android:textColor="@color/colorAccent"
                 android:background="@android:color/transparent"
-                android:text="@string/amount_placeholder"
+                android:hint="@string/amount_placeholder"
                 android:inputType="numberDecimal" />
 
 
@@ -99,7 +99,7 @@
                 android:textSize="15dp"
                 android:gravity="center"
                 android:inputType="textPersonName"
-                android:text="@string/private_msg_placeholder" />
+                android:hint="@string/private_msg_placeholder" />
 
         </LinearLayout>
 
