--- a/app/src/main/res/anim/solid_circle_translation.xml
+++ b/app/src/main/res/anim/solid_circle_translation.xml
@@ -1,27 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <translate
-        android:duration="100"
-        android:fromXDelta="-20%p"
-        android:toXDelta="20%p" />
-    <translate
-        android:duration="100"
-        android:fromXDelta="20%p"
-        android:toXDelta="-20%p" />
-    <translate
-        android:duration="100"
-        android:fromXDelta="-20%p"
-        android:toXDelta="10%p" />
-    <translate
-        android:duration="100"
-        android:fromXDelta="10%p"
-        android:toXDelta="-5%p" />
-    <translate
-        android:duration="100"
-        android:fromXDelta="-5%p"
-        android:toXDelta="5%p" />
-    <translate
-        android:duration="100"
-        android:fromXDelta="5%p"
-        android:toXDelta="0%p" />
+        android:fromXDelta="-10"
+        android:toXDelta="10"
+        android:repeatCount="4"
+        android:repeatMode="reverse"
+        android:interpolator="@android:anim/linear_interpolator"
+        android:duration="50" />
 </set>
