--- a/app/src/main/res/layout/activity_passcode.xml
+++ b/app/src/main/res/layout/activity_passcode.xml
@@ -69,8 +69,8 @@
         android:id="@+id/text_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="70dp"
-        android:layout_marginRight="70dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
         android:layout_marginTop="40dp"
         android:layout_weight="1"
         android:orientation="vertical">
@@ -87,6 +87,8 @@
             android:maxLength="6"
             android:textColor="@android:color/transparent"
             app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@+id/linearLayout" />
 
         <LinearLayout
