Developing take a photo or library select one

--- a/app/src/main/res/layout/profile_view.xml
+++ b/app/src/main/res/layout/profile_view.xml
@@ -35,6 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="76dp"
         android:layout_marginTop="56dp"
+        android:background="@color/appIco_background"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -54,7 +55,7 @@
             tools:layout_editor_absoluteY="72dp" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/editAvatarButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
@@ -110,18 +111,19 @@
                 android:id="@+id/rowNickname"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/dot_dark_slider">
+                android:background="@color/appIco_background">
 
                 <TextView
                     android:id="@+id/nicknameProfileView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
+                    android:layout_marginStart="15dp"
                     android:height="44dp"
                     android:contentDescription="@string/nickname"
                     android:gravity="center_vertical"
                     android:text="@string/nickname"
-                    android:textColor="@android:color/black" android:layout_marginStart="15dp" />
+                    android:textColor="@android:color/black" />
 
                 <RelativeLayout
                     android:layout_width="0dp"
@@ -149,6 +151,11 @@
                 android:minHeight="0.5dp" />
 
         </TableLayout>
+        <com.theartofdev.edmodo.cropper.CropImageView
+            android:id="@+id/CropImageView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
     </RelativeLayout>
 
 
