--- a/app/src/main/res/layout/profile_view.xml
+++ b/app/src/main/res/layout/profile_view.xml
@@ -26,9 +26,9 @@
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
         android:tint="@color/ic_launcher_background"
+        app:layout_constraintLeft_toLeftOf="@+id/toolbar3"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="?attr/actionModeCloseDrawable"
-        tools:layout_editor_absoluteX="0dp" />
+        app:srcCompat="?attr/actionModeCloseDrawable" />
 
     <RelativeLayout
         android:id="@+id/avatarLayout"
@@ -42,8 +42,10 @@
 
         <ImageView
             android:id="@+id/avatarProfileView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:minWidth="44dp"
+            android:minHeight="44dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
@@ -151,11 +153,6 @@
                 android:minHeight="0.5dp" />
 
         </TableLayout>
-        <com.theartofdev.edmodo.cropper.CropImageView
-            android:id="@+id/CropImageView"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
     </RelativeLayout>
 
 
