--- a/app/src/main/res/layout/sendmoney_send_fragment.xml
+++ b/app/src/main/res/layout/sendmoney_send_fragment.xml
@@ -59,10 +59,38 @@
             app:layout_constraintTop_toBottomOf="@id/ready_to_send_text"/>
 
         <TextView
+            android:id="@+id/to_text"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:background="@android:color/white"
             app:layout_constraintTop_toBottomOf="@id/to_label"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/to_text"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:gravity="center_vertical">
+
+            <app.paypro.payproapp.ui.button.swipe.SwipeButton
+                android:id="@+id/swipe_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:layout_marginEnd="40dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                app:button_background="@drawable/shape_swipe_button"
+                app:button_image_height="60dp"
+                app:initial_state="disabled"
+                app:inner_text="@string/swipe_to_send"
+                app:inner_text_background="@drawable/shape_swipe_rounded"
+                app:inner_text_bottom_padding="18dp"
+                app:inner_text_color="@color/pp_purple"
+                app:inner_text_size="16sp"
+                app:inner_text_top_padding="18dp" />
+
+        </LinearLayout>
 
     </android.support.constraint.ConstraintLayout>
 
