--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,5 +33,7 @@
   <color name="pp_sm_gradTop">#70ffe2fd</color>
   <color name="pp_sm_gradMiddle">#b5987ff7</color>
 
+  <color name="inactive_grey">#a9a9a9</color>
+
 
 </resources>
