--- a/app/src/main/res/layout/sendmoney_amount_fragment.xml
+++ b/app/src/main/res/layout/sendmoney_amount_fragment.xml
@@ -23,24 +23,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <LinearLayout
-                android:id="@+id/toolbar_next_layout"
+            <Button
+                android:id="@+id/next_button"
                 android:layout_width="wrap_content"
-                android:layout_height="?attr/actionBarSize"
-                android:clickable="true"
-                android:padding="15dp"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:text="@string/confirmation_code_actionbar"
+                android:textColor="@color/inactive_grey"
                 android:layout_gravity="right"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/next_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/confirmation_code_actionbar"
-                    android:textColor="@android:color/white" />
-
-            </LinearLayout>
+                android:enabled="false"/>
 
         </android.support.v7.widget.Toolbar>
 
@@ -55,15 +46,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="60dp"
-            android:layout_marginLeft="60dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginLeft="50dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/currency_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:textSize="30dp"
                 android:gravity="center"
                 android:padding="20dp"
@@ -89,8 +80,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="60dp"
-            android:layout_marginLeft="60dp"
+            android:layout_marginRight="50dp"
+            android:layout_marginLeft="50dp"
             android:layout_marginTop="10dp"
             android:gravity="center">
 
@@ -100,7 +91,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorAccent"
                 android:background="@android:color/transparent"
-                android:textSize="15dp"
+                android:textSize="20dp"
                 android:gravity="center"
                 android:inputType="textPersonName"
                 android:hint="@string/private_msg_placeholder" />
