--- a/app/src/main/res/layout/sendmoney_send_fragment.xml
+++ b/app/src/main/res/layout/sendmoney_send_fragment.xml
@@ -45,8 +45,12 @@
             android:id="@+id/ready_to_send_text"
             android:layout_width="match_parent"
             android:layout_height="100dp"
+            android:textSize="25sp"
+            android:gravity="center_vertical"
+            android:paddingLeft="17dp"
+            android:paddingStart="17dp"
             android:background="@android:color/white"
-            app:layout_constraintTop_toBottomOf="@id/ready_to_send_label"/>
+            app:layout_constraintTop_toBottomOf="@id/ready_to_send_label" />
 
         <TextView
             android:id="@+id/to_label"
@@ -58,12 +62,53 @@
             android:text="@string/to"
             app:layout_constraintTop_toBottomOf="@id/ready_to_send_text"/>
 
-        <TextView
+        <LinearLayout
             android:id="@+id/to_text"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:background="@android:color/white"
-            app:layout_constraintTop_toBottomOf="@id/to_label"/>
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@id/to_label"
+            android:background="@android:color/white">
+
+            <TextView
+                android:id="@+id/to_text_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:paddingLeft="17dp"
+                android:paddingStart="17dp"
+                app:layout_constraintTop_toBottomOf="@id/to_label"/>
+
+            <TextView
+                android:id="@+id/to_text_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:paddingLeft="17dp"
+                android:paddingStart="17dp"
+                app:layout_constraintTop_toBottomOf="@id/to_text_1"/>
+
+            <TextView
+                android:id="@+id/to_text_3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:paddingLeft="17dp"
+                android:paddingStart="17dp"
+                app:layout_constraintTop_toBottomOf="@id/to_text_2"/>
+
+            <TextView
+                android:id="@+id/to_text_4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:paddingLeft="17dp"
+                android:paddingStart="17dp"
+                app:layout_constraintTop_toBottomOf="@id/to_text_3"/>
+
+        </LinearLayout>
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
