SwipeButton offset bug solved

--- a/app/src/main/res/layout/sendmoney_send_fragment.xml
+++ b/app/src/main/res/layout/sendmoney_send_fragment.xml
@@ -67,6 +67,9 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:orientation="vertical"
+            android:paddingTop="5dp"
+            android:paddingLeft="17dp"
+            android:paddingStart="17dp"
             app:layout_constraintTop_toBottomOf="@id/to_label"
             android:background="@android:color/white">
 
@@ -75,8 +78,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                android:paddingLeft="17dp"
-                android:paddingStart="17dp"
                 app:layout_constraintTop_toBottomOf="@id/to_label"/>
 
             <TextView
@@ -84,8 +85,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                android:paddingLeft="17dp"
-                android:paddingStart="17dp"
                 app:layout_constraintTop_toBottomOf="@id/to_text_1"/>
 
             <TextView
@@ -93,8 +92,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                android:paddingLeft="17dp"
-                android:paddingStart="17dp"
                 app:layout_constraintTop_toBottomOf="@id/to_text_2"/>
 
             <TextView
@@ -102,8 +99,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                android:paddingLeft="17dp"
-                android:paddingStart="17dp"
                 app:layout_constraintTop_toBottomOf="@id/to_text_3"/>
 
         </LinearLayout>
