--- a/app/src/main/res/layout/sendmoney_address_fragment.xml
+++ b/app/src/main/res/layout/sendmoney_address_fragment.xml
@@ -23,25 +23,15 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/content">
 
-            <LinearLayout
-                android:id="@+id/toolbar_next_layout"
+            <Button
+                android:id="@+id/next_button"
                 android:layout_width="wrap_content"
-                android:layout_height="?attr/actionBarSize"
-                android:clickable="true"
-                android:visibility="visible"
-                android:padding="15dp"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:text="@string/confirmation_code_actionbar"
+                android:textColor="@color/inactive_grey"
                 android:layout_gravity="right"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/next_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/confirmation_code_actionbar"
-                    android:textColor="@android:color/white" />
-
-            </LinearLayout>
+                android:enabled="false"/>
 
         </android.support.v7.widget.Toolbar>
 
@@ -69,13 +59,15 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:textColor="@android:color/black"
-                android:text="Bitcoin Addr:" />
+                android:text="@string/bitcoin_address" />
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/addr_input_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:paddingRight="8dp"
+                android:gravity="center_vertical"
                 app:errorEnabled="true"
                 app:layout_constraintStart_toEndOf="@+id/addr_label">
 
@@ -83,7 +75,8 @@
                     android:id="@+id/addr_edit_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:ems="10"
+                    android:textSize="12sp"
+                    android:ems="17"
                     android:maxLines="1"
                     android:ellipsize="end"
                     android:gravity="center"
