--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,12 +18,19 @@
     </style>
 
 
-    <style name="SearchViewStyle" parent="Widget.AppCompat.SearchView">
-        <item name="searchIcon">@drawable/ic_search_white_24dp</item>
-        <item name="closeIcon">@drawable/ic_close_white_24dp</item>
-        <item name="searchHintIcon">@null</item>
-        <item name="queryHint">@string/search_hint</item>
-        <item name="queryBackground">@android:color/transparent</item>
+    <!--<style name="SearchViewStyle" parent="Widget.AppCompat.SearchView">-->
+        <!--<item name="searchIcon">@drawable/ic_search_white_24dp</item>-->
+        <!--<item name="closeIcon">@drawable/ic_close_white_24dp</item>-->
+        <!--<item name="searchHintIcon">@null</item>-->
+        <!--<item name="queryHint">@string/search_hint</item>-->
+        <!--<item name="queryBackground">@android:color/transparent</item>-->
+    <!--</style>-->
+
+    <style name="AppTheme.ActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@android:color/white</item>
+        <item name="colorPrimaryDark">@android:color/white</item>
+        <item name="colorAccent">@android:color/white</item>
     </style>
 
 
