--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,6 +34,7 @@
   <color name="pp_sm_gradMiddle">#b5987ff7</color>
 
   <color name="inactive_grey">#a9a9a9</color>
+  <color name="secundary_grey">#747474</color>
 
 
 </resources>
