--- a/app/src/main/res/layout/contacts_list_item.xml
+++ b/app/src/main/res/layout/contacts_list_item.xml
@@ -67,7 +67,7 @@
             android:paddingLeft="8dp"
             android:lines="1"
             android:text="+34 123 45 67 89"
-            android:textColor="@android:color/black"
+            android:textColor="@color/secundary_grey"
             android:textSize="13sp"
             android:clickable="false"/>
     </LinearLayout>
