--- a/app/src/main/res/layout/account_tab.xml
+++ b/app/src/main/res/layout/account_tab.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<android.support.constraint.ConstraintLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
@@ -8,50 +8,21 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".AccountFragment">
 
-<android.support.design.widget.AppBarLayout
-    android:id="@+id/appbar"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="?attr/colorPrimary"
-    android:fitsSystemWindows="true"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-    <android.support.design.widget.CollapsingToolbarLayout
-        android:id="@+id/collapsing_toolbar"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/topPanel"
         android:layout_width="match_parent"
-        android:layout_height="256dp"
-        android:fitsSystemWindows="true"
-        app:contentScrim="?attr/colorPrimary"
-        app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
-        app:titleEnabled="false">
-
-        <ImageView
-            android:id="@+id/htab_header"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/gradient"
-            android:fitsSystemWindows="true"
-            android:scaleType="centerCrop"
-            app:layout_collapseMode="parallax"/>
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_gravity="top"
-            android:layout_height="?attr/actionBarSize"
-            android:layout_marginBottom="110dp"
-            app:layout_scrollFlags="scroll|enterAlways"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            app:layout_collapseMode="pin"/>
+        android:layout_height="217dp"
+        android:elevation="2dp"
+        android:background="@drawable/gradient">
 
         <LinearLayout
+            android:id="@+id/currency_layout"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:fitsSystemWindows="true"
-            android:layout_gravity="center_vertical"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_collapseMode="parallax"
-            android:scaleType="centerCrop">
+            android:gravity="center"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tabs">
 
             <TextView
                 android:id="@+id/currency_name"
@@ -59,37 +30,69 @@ tools:context=".AccountFragment">
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/bits"
-                android:textSize="35sp" />
+                android:textColor="@android:color/white"
+                android:textSize="40sp" />
 
-            <TextView
-                android:id="@+id/currency_balance"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/balance_empty"
-                android:textSize="15sp"/>
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:layout_marginBottom="3dp"
+                    android:layout_marginRight="7dp"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="10dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="3dp"
+                        app:srcCompat="@drawable/ic_greek_letter_mu_serif_sans" />
+
+
+                    <ImageView
+                        android:layout_width="13dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="2dp"
+                        app:srcCompat="@drawable/ic_btc_sans" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/currency_balance"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/balance_empty"
+                    android:textColor="@android:color/white"
+                    android:textSize="25sp" />
+
+
+            </LinearLayout>
 
         </LinearLayout>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:layout_gravity="bottom"
-            android:elevation="2dp"
-            app:tabMode="scrollable"
-            app:tabContentStart="72dp"
-            app:layout_constraintBottom_toBottomOf="@+id/toolbar_constraint_layout"/>
+            app:tabSelectedTextColor="@android:color/white"
+            app:tabIndicatorColor="@android:color/white"
+            app:tabTextColor="@android:color/white"
+            app:tabPaddingStart="72dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
+    </android.support.constraint.ConstraintLayout>
 
-    </android.support.design.widget.CollapsingToolbarLayout>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/topPanel"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-</android.support.design.widget.AppBarLayout>
-
-<android.support.v4.view.ViewPager
-    android:id="@+id/viewpager"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-</android.support.design.widget.CoordinatorLayout>
+</android.support.constraint.ConstraintLayout>
