--- a/app/src/main/res/layout/transaction_list_item.xml
+++ b/app/src/main/res/layout/transaction_list_item.xml
@@ -32,13 +32,43 @@
                 app:layout_constraintBottom_toTopOf="@+id/textView4"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/amount_text"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_weight="1"
-                android:layout_height="wrap_content"
                 android:gravity="right"
-                android:text="TextView" />
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="2dp"
+                    android:layout_marginRight="4dp">
+
+                    <ImageView
+                        android:layout_width="7dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="2dp"
+                        app:srcCompat="@drawable/ic_greek_letter_mu_serif_sans_grey" />
+
+
+                    <ImageView
+                        android:layout_width="9dp"
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="4dp"
+                        app:srcCompat="@drawable/ic_btc_sans_grey" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/amount_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:text="10,000.23" />
+
+            </LinearLayout>
+
+
 
 
 
