--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,5 +22,16 @@
         <item name="android:windowBackground">@color/PayPro_Blue</item>
     </style>
 
+    <style name="continue_button" parent="@android:style/Widget.Button">
+        <item name="android:gravity">center_vertical|center_horizontal</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:width">250dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@color/pp_green</item>
+        <item name="android:focusable">true</item>
+        <item name="android:clickable">true</item>
+    </style>
+
 
 </resources>
